shaku_derive/tests/ui/interface_not_name_value.stderr
error: Invalid attribute format. The attribute must be in name-value form. Example: #[shaku(interface = <your trait>)]
 --> tests/ui/interface_not_name_value.rs:9:1
  |
9 | #[shaku(interface(ComponentTrait))]
  | ^

error: Invalid attribute format. The attribute must be in name-value form. Example: #[shaku(interface = <your trait>)]
  --> tests/ui/interface_not_name_value.rs:14:1
   |
14 | #[shaku(interface(ProviderTrait))]
   | ^
